--- a/style.css
+++ b/style.css
@@ -2,6 +2,33 @@ div:not(id="game") {
     background-color: #303030;
 }
 
+#movement {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    left: 35vw;
+    top: 75vh;
+    visibility: hidden;
+}
+#movement input {
+    background-color: #151515;
+    color: #ffffff;
+    border: 1px solid #454545;
+    width: 10vw;
+    height: 10vw;
+}
+#movement input:active {
+    background-color: #ffffff;
+    color: #151515;
+}
+
+#movement>div {
+    display: flex;
+    flex-direction: column;
+}
+
+
 #game>div {
     display: flex;
     justify-content: center;
