--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-div:not(id="game") {
-    background-color: #303030;
-}
-
 #movement {
     position: fixed;
     display: flex;
@@ -35,7 +31,12 @@ div:not(id="game") {
     align-items: center;
 }
 
+body, html {
+    margin: 0;
+    padding: 0;
+}
 #game {
+    margin: 0;
     width: 100%;
     height: 100%;
     background-color: #151515;
@@ -43,23 +44,25 @@ div:not(id="game") {
 }
 
 .background {
-    background-color: #303030;
-    color: #303030;
-    margin: 1px;
+    background-color: #000000;
+    color: #000000;
 }
 
 .snake {
-    background-color: #ffffff;
-    color: #ffffff;
+    background-color: #39ff14;
+    color: #39ff14;
+    margin: 1px;
 }
 
 .snake-head {
-    background-color: lightblue;
+    background-color: #39ff14;
+    margin: 1px;
 }
 
 .apple {
     background-color: red;
     color: red;
+    margin: 1px;
 }
 
 .bomb {
@@ -68,6 +71,6 @@ div:not(id="game") {
 }
 
 .destroyed {
-    background-color: #000000;
-    color: #000000;
+    background-color: #151515;
+    color: #151515;
 }
